tests/NormalTests/paczka1/small_fuzzy/63502457.err
Error in line 1: Xs3YxXqN S135 82,7
Error in line 4: E7tJ3JDe S924 8,74
Error in line 3: E7tJ3JDe S135 48,0
Error in line 5: E7tJ3JDe S924 5,1
